# oxicrypt

./: .clang-format  Cargo.toml  LICENSE  README.md  TODO.org  build.rs  meson.build  meson_options.txt  rustfmt.toml  test_multi_arch.sh
benches/: aesni_multiblock.rs
cpuid/: Cargo.toml
cpuid/cpuid-tell/: main.rs
cpuid/src/: lib.rs  vendor.rs
examples/: hmac.rs  sha.rs
include/oxicrypt/: aes.h  digest.h  hmac-sha.h  hmac.h  internal.h  oxicrypt.h  sha.h
include/oxicrypt/core/: aes_arm.h  aes_lut.h  aesni.h  md_compress.h
liboxicry/: Cargo.toml
liboxicry/include/: aes.h
liboxicrypt/: Cargo.toml
liboxicrypt/src/: lib.rs
oxicrypt/: Cargo.toml  aes.rs  digest.rs  hkdf.rs  hmac.rs  lib.rs  md5.rs  merkle_damgard.rs  num.rs  runtime.rs  sha.rs  test_vectors.rs  traits.rs
oxicrypt-core/: Cargo.toml  build.rs
oxicrypt-core/src/: hwfeatures.rs  lib.rs  test_vectors.rs
oxicrypt-core/src/aes/: aes128_decrypt_generic.rs  aes128_decrypt_x86_aesni.rs  aes128_encrypt_generic.rs  aes128_encrypt_x86_aesni.rs  aes_generic.rs  aes_lut.rs  aes_x86_aesni.rs  aesni.rs  lut.rs  mod.rs
oxicrypt-core/src/sha/: mod.rs  sha1_compress_generic.rs  sha256_compress_generic.rs  sha512_compress_generic.rs
oxicrypt-core/test-vectors/: aes128-decrypt.txt  aes128-encrypt-decrypt.txt  aes192-decrypt.txt  aes192-encrypt-decrypt.txt  aes192-expand-key.txt  aes192-inverse-key.txt  aes256-encrypt-decrypt.txt  aes256-encrypt.txt  aes256-inverse-key.txt
oxicrypt-sys/: Cargo.toml
oxicrypt-sys/include/: aes.h  sha.h
oxicrypt-sys/include/oxicrypt/: aes.h  sha.h
oxicrypt-sys/src/: aes.rs  lib.rs  sha.rs
oxicrypt-test-vectors/: Cargo.toml  build.rs
oxicrypt-test-vectors/generate/: generate_aes.rs
oxicrypt-test-vectors/scripts/: aesni-intel.c  generate_aes_vectors.py
oxicrypt-test-vectors/src/: aes.rs  aesni-intel.c  aesni-intel.h  aesni_intel.rs  lib.rs
oxicrypt/hazmat/: mod.rs
oxicrypt/hazmat/aes/: lut.rs  mod.rs
oxicrypt/hazmat/md5/: md5_compress_generic.rs
oxicrypt/hazmat/sha/: sha256_compress_generic.rs  sha512_compress_generic.rs
oxicrypt/src/: aes.rs  lib.rs  sha.rs
oxicrypt/src/tests/: aes.rs  mod.rs  sha1.rs  sha1_test_vectors.txt  sha224.rs  sha224_test_vectors.txt  sha256.rs  sha256_test_vectors.txt  sha384.rs  sha512.rs  sha512_224.rs  sha512_256.rs
oxicrypt_c/: Cargo.toml
oxicrypt_c/src/: aes.rs  aes_arm.rs  aes_lut.rs  aesni.rs  digest.rs  hmac.rs  lib.rs  md_compress.rs  sha.rs
oxicrypt_core/: Cargo.toml
oxicrypt_core/src/: aes_arm_aes_aes_decrypt.rs  aes_arm_aes_aes_encrypt.rs  aes_fixslice_aes_core.rs  aes_lut.rs  aes_lut_aes_core.rs  aes_x86_aesni_aes_decrypt.rs  aes_x86_aesni_aes_encrypt.rs  aes_x86_aesni_aes_expand_key.rs  aes_x86_aesni_aes_inverse_key.rs  digest_initial_states.rs  lib.rs  md5_generic_md5_compress.rs  sha_generic_sha1_compress.rs  sha_generic_sha256_compress.rs  sha_generic_sha512_compress.rs  sha_initial_states.rs  test_vectors.rs
oxicrypt_core/src/aes_arm/: decrypt.rs  encrypt.rs  mod.rs
oxicrypt_core/src/aesni/: decrypt.rs  encrypt.rs  expand_key.rs  inverse_key.rs  mod.rs
oxicrypt_core/src/md_compress/: md5.rs  mod.rs  sha1.rs  sha256.rs  sha512.rs
oxicrypt_python/: Cargo.toml  pyproject.toml
oxicrypt_python/oxicrypt/: __init__.py  digest.py
oxicrypt_python/src/: aes_arm.rs  aes_arm_aes.rs  aes_lut.rs  aes_x86_aesni.rs  aesni.rs  digest.rs  digest_compress.rs  hmac.rs  lib.rs  md_compress.rs
oxicrypt_test/: Cargo.toml  README.md  build.rs
oxicrypt_test/.github/workflows/: rust-clippy.yml
oxicrypt_test/generate/: generate_aes.rs
oxicrypt_test/src/: aes.rs  aesni-intel.c  aesni_intel.rs  lib.rs
src/: lib.rs  sha.c  sha.h
src/sha/: mod.rs  sha1_compress_generic.rs  sha256_compress_generic.rs  sha512_compress_generic.rs
src/tests/: mod.rs  sha1.rs  sha384.rs  sha384_test_vectors.txt  sha512_224.rs  sha512_224_test_vectors.txt  sha512_256_test_vectors.txt  sha512_test_vectors.txt
test-vectors/: README.md  aes128-encrypt.txt  aes128-expand-key.txt  aes128-inverse-key.txt  aes192-encrypt.txt  aes256-decrypt.txt  aes256-expand-key.txt  md5-compress.txt  sha1-compress.txt  sha256-compress.txt  sha512-compress.txt
