cargo-features = [ "strip" ]

[workspace]
members = [
  "oxicrypt_c",
]

[package]
name = "oxicrypt"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2021"
description = "Cryptography library written in Rust."
repository = "https://github.com/byhowe/oxicrypt.git"
license = "MIT"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]

[lib]
name = "oxicrypt"
path = "library/lib.rs"

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies.std_detect]
version = "0.1"
git = "https://github.com/rust-lang/stdarch.git"
default-features = false

[[example]]
name = "hmac"
path = "examples/hmac.rs"

[dev-dependencies]
hex = "0.4"

[features]
default = ["alloc"]

alloc = []
std = ["alloc"]

# Enable C/C++ API.
c = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
