[workspace]
members = [
  "oxicrypt_c",
  "oxicrypt_python",
  "oxicrypt_core",
  "oxicrypt_test",
]

[package]
name = "oxicrypt"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2021"
description = "Cryptography library written in Rust."
repository = "https://github.com/byhowe/oxicrypt.git"
license = "MIT"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]

[lib]
name = "oxicrypt"
path = "oxicrypt/lib.rs"

[dependencies]
oxicrypt_core = { path="oxicrypt_core" }

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies.std_detect]
version = "0.1"
git = "https://github.com/rust-lang/stdarch.git"
default-features = false

[dev-dependencies]
hex = "0.4"
criterion = { version = "0.4", features = ["real_blackbox"] }

[[bench]]
name = "aesni_multiblock"
harness = false

[features]
default = ["alloc"]

alloc = []
std = ["alloc"]

# Enable C/C++ API.
c = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
strip = "symbols"
