cargo-features = ["edition2021"]

[package]
name = "liboxicrypt"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2021"
description = "C/C++ interface for OxiCrypt"
repository = "https://github.com/byhowe/oxicrypt.git"
license = "MIT"
keywords = ["crypto"]
categories = ["cryptography"]
workspace = ".."

[lib]
name = "oxicry"
crate-type = ["cdylib", "staticlib"]

[dependencies.oxicrypt-core]
version = "0.1.0"
path = "../oxicrypt-core"
