cargo-features = ["edition2021"]

[package]
name = "oxicrypt-core"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2021"
description = "Core of the OxiCrypt Rust library"
repository = "https://github.com/byhowe/oxicrypt.git"
license = "MIT"
keywords = ["crypto"]
categories = ["cryptography"]
workspace = ".."

[features]
# Use assembly version of some functions whenever possible.
asm = []

[dependencies]
cfg-if = "1"
