cargo-features = ["edition2021"]

[package]
name = "oxicrypt-core"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2021"
description = "Core of the OxiCrypt Rust library"
repository = "https://github.com/byhowe/oxicrypt.git"
license = "MIT"
keywords = ["crypto"]
categories = ["cryptography"]
workspace = ".."

[features]
default = ["aesni"]

# Use assembly version of some functions whenever possible.
asm = []

# Enable AES-NI. Does not do anything on architectures that do not support it.
aesni = []

[dependencies]
cfg-if = "1"
