cargo-features = ["edition2021"]

[package]
name = "oxicrypt-core"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2021"
description = "Core of the OxiCrypt Rust library"
repository = "https://github.com/byhowe/oxicrypt.git"
license = "MIT"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]
workspace = ".."

[target.'cfg(any(target_arch = "x86", target_arch = "x86_64"))'.dependencies.std_detect]
version = "0.1"
git = "https://github.com/rust-lang/stdarch.git"
default-features = false

[features]
default = ["aesni"]

# Enable AES-NI. Does not do anything on architectures that do not support it.
aesni = []
