cargo-features = ["edition2021"]

[package]
name = "oxicrypt"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2021"
description = "OxiCrypt Rust library"
repository = "https://github.com/byhowe/oxicrypt.git"
license = "MIT"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]
workspace = ".."

[dependencies.oxicrypt-core]
version = "0.1.0"
path = "../oxicrypt-core"

[dev-dependencies]
hex = "0.4"

[features]
default = ["alloc", "aesni"]

std = ["alloc"]
alloc = []

aesni = ["oxicrypt-core/aesni"]
