[package]
name = "oxicrypt_core"
version = "0.1.0"
authors = ["B. Howe <37745048+byhowe@users.noreply.github.com>"]
edition = "2021"
description = "Hazardous core of oxicrypt"
repository = "https://github.com/byhowe/oxicrypt.git"
license = "MIT"
keywords = ["crypto"]
categories = ["cryptography", "no-std"]
workspace = ".."

[lib]
name = "oxicrypt_core"
path = "src/lib.rs"

[dependencies]
cfg-if = "1.0"
